# KGlabs

./: .gitignore  README.md
LAB1/KGlab/: CMakeLists.txt  CMakePresets.json  Camera.cpp  Event.h  KGlab.vcxproj  KGlab.vcxproj.filters  MyOGL.cpp  MyOGL.h  Render.cpp  Render.h  compile_commands.json  main.cpp
LAB2/KGlab/: KGlab.vcxproj  KGlab.vcxproj.filters  MyOGL.cpp  MyOGL.h  Render.cpp
LAB2_training/KGlab/: KGlab.vcxproj  KGlab.vcxproj.filters  Render.cpp
